[project]
name = "microshop"
version = "0.1.0"
description = ""
authors = [
    {name = "aleksejg",email = "a1ex.g@list.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standart] (>=0.40.0,<0.41.0)",
    "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
